# active_inference

./: .instructions.md  FRAMES.md  sub.toml
robot_concept/: CMakeLists.txt  DoxyFile  README.md  robot_concept.cdsl  room.json  shadow.json
robot_concept/etc/: config  config.toml
robot_concept/src/: CMakeLists.txt  specificworker.cpp  specificworker.h  unified_voxel_grid.cpp  unified_voxel_grid.h  voxel_opengl_viewer.cpp  voxel_opengl_viewer.h  yolo_seg_detector.cpp  yolo_seg_detector.h
robot_room/: CMakeLists.txt  DoxyFile  README.md  robot_room.cdsl
robot_room/etc/: config  config.toml
robot_room/src/: CMakeLists.txt  localUI.ui  mainUI.ui.new  room_concept.h  specificworker.cpp  specificworker.cpp.new  specificworker.h
room_concept/: CMakeLists.txt  DoxyFile  README.md  room.json  room_concept.cdsl
room_concept/etc/: config  config.toml
room_concept/src/: CMakeLists.txt  buffer_types.h  camera_visualizer.cpp  camera_visualizer.h  custom_widget.h  localUI.ui  mainUI.ui  room_concept.cpp  room_concept.h  room_model.cpp  room_model.h  specificworker.cpp  specificworker.h  specificworker.h.new  timeseries_plot.cpp  viewer_2d.cpp  viewer_2d.h
